terraform/kubernetes/manifests/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helm-front
  labels:
    app.kubernetes.io/name: helm-front
    app.kubernetes.io/version: "1.0-amd64"
    app.kubernetes.io/managed-by: kustomize
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: helm-front
      app.kubernetes.io/version: "1.0-amd64"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: helm-front
        app.kubernetes.io/version: "1.0-amd64"
        app.kubernetes.io/managed-by: kustomize
    spec:
      containers:
        - name: helm-front
          image: docker.io/jeremydavis/helm-front:1.0-amd64
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
