terraform/kubernetes/manifests/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helm-front
  labels:
    app.kubernetes.io/name: helm-front
    app.kubernetes.io/version: "1.0-amd64"
    app.kubernetes.io/managed-by: kustomize
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: helm-front
    app.kubernetes.io/version: "1.0-amd64"
