terraform/kubernetes/manifests/back-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helm-back
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  labels:
    app.kubernetes.io/name: helm-back
    app.kubernetes.io/version: "1.0-amd64"
    app.kubernetes.io/managed-by: kustomize
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - backend:
              service:
                name: helm-back
                port:
                  name: http
            path: /api(/|$)(.*)
            pathType: ImplementationSpecific
